<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_text">TODO</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="goto_signup">
        Don\'t have account? <font color="#4287f5"><b>SignUp</b></font>.
    </string>
    <string name="goto_signIn">
        Already have account? <font color="#4287f5"><b>SignIn</b></font>.
    </string>
    <string name="login_title">Login</string>
    <string name="registration_title">Registration</string>
</resources>